test/tests/fuzz/Fuzz4.expected
Fuzz4.frost:1:31: error: unknown type 'Strijg'
Fuzz4.frost:18:23: error: unknown identifier
Fuzz4.frost:19:5: error: no match for call to 'printLine'; unable to determine the type of argument 1
3 errors
